tinyc/test/bad/struct-incomplete-member.c
struct incomplete;

struct s
{
    struct incomplete x;
};

struct incomplete {};

int main()
{
    struct s x;

    return 0;
}
